Implement energy saved api (#201)
