# backend/api-documentation/swagger.json
@@ -862,6 +862,29 @@
         }
       }
     },
+    "/energy/saved": {
+      "get": {
+        "tags": [
+          "energy"
+        ],
+        "summary": "Get energy saved by for each category",
+        "description": "Returns a list of energy saved for each category",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/SavedCategory"
+              }
+            }
+          }
+        }
+      }
+    },
     "/energy/total": {
       "get": {
         "tags": [
@@ -1371,6 +1394,18 @@
           "$ref": "#/definitions/Category"
         },
         "total": {
+          "type": "integer",
+          "example": 1234567
+        }
+      }
+    },
+    "SavedCategory": {
+      "type": "object",
+      "properties": {
+        "category": {
+          "$ref": "#/definitions/Category"
+        },
+        "saved": {
           "type": "integer",
           "example": 1234567
         }
